--- a/.github/workflows/SE333_CI.yml
+++ b/.github/workflows/SE333_CI.yml
@@ -35,4 +35,4 @@ jobs:
       - name: Jacoco Report
         uses: actions/upload-artifact@v4
         with:
-          path: ./target/site/jacoco/index.html
+          path: target/site/jacoco/index.html
