--- a/.github/workflows/SE333_CI.yml
+++ b/.github/workflows/SE333_CI.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Upload Checkstyle Result
         uses: actions/upload-artifact@v4
         with:
+          name: checkstyle-report${{ github.run_id }}
           path: target/reports/checkstyle.html
-          overwrite: true
 
       - name: Run Maven Test
         run: mvn test
@@ -36,5 +36,5 @@ jobs:
       - name: Jacoco Report
         uses: actions/upload-artifact@v4
         with:
+          name: jacoco-report${{ github.run_id }}
           path: target/site/jacoco/index.html
-          overwrite: true
