Updated workflow to upload full folder of reports to fix html stylesheet and images

--- a/.github/workflows/SE333_CI.yml
+++ b/.github/workflows/SE333_CI.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: checkstyle-report${{ github.run_id }}
-          path: target/reports/checkstyle.html
+          path: target/reports
 
       - name: Run Maven Test
         run: mvn test
@@ -37,4 +37,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: jacoco-report${{ github.run_id }}
-          path: target/site/jacoco/index.html
+          path: target/site/jacoco
